# SMA-1

./: .gitignore  .zenodo.json  CITATION.cff  GOALS.md  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml  structure_mapping_agentic_memory_blueprint.md
.github/workflows/: ci.yml  publish.yml
configs/: default.toml  model.toml  ontologies.json  preregistration.md  preregistration_ontology.md  preregistration_v2_llmqa.md
data/draft_adapters/: 60b5e663ee113960.json  af7a69a9f0664905.json  afe297a4b87a18a6.json  bbd7a5781d2f90af.json
data/manifests/: datasets.json
docker/zep/: README.md  docker-compose.yml
docs/: CLEANUP.md  EXECUTIVE_REPORT.md  MCP.md  PAPER_SCOPE.md  PAPER_SPINE.md  POSITIONING.md  Project_Architecture_Blueprint.md  STATUS.md
docs/ADR/: 001-stack-and-scope.md  002-goal-acceptance.md  003-retrieval-and-orchestration-policy.md  004-scorer-ablation-ses-vs-mdl.md  005-score-v2-surprisal-ses.md  006-matcher-semantics-v4.md  007-dynamic-adapter-governance.md  008-adapter-v1-freeze.md
examples/: codex_config.toml  sma_manifest.example.json
paper/: GRAPHICS_STACK.md  README.md  REVIEWER_RESPONSE.md
paper/diagrams/: README.md  architecture.mmd  draft_adapter_loop.mmd  tiered_retrieval.mmd
paper/figure_specs/: README.md  figure_01_system_overview.md  figure_02_structure_mapping_mechanism.md  figure_03_certified_macfac.md  figure_04_transfer_results.md  figure_05_decomposition_ablation.md  figure_06_ssb_structure_vs_surface.md  figure_07_drift.md  figure_08_anti_hallucination.md  figure_09_sage_consolidation.md
paper/figures/: ALL_FIGURES.tex  claude_design_prompts.md  fig1_caption.md
paper/manuscript/: DRAFT.md  README.md  _migrate_to_snjnl.py  main.tex  references.bib  sma_nature_mi.tex  sn-nature.bst  supplement.tex
paper/tables/: tab_bugsinpy.tex  tab_family_v3.tex  tab_ladder.tex  tab_transfer_v3.tex
release/: RELEASE_PLAN.md  SSB_dataset_card.md  model_card.md
release/hf_space/: README.md  app.py  requirements.txt
reports/: README.md  calibration_grid.csv  h3_judge_summary.md  macfac_certification.csv
reports/confirmatory/: ablation_mechanism.csv  agentic_cyber.csv  agentic_discovery.csv  agentic_finance.csv  agentic_fraud_elliptic.csv  agentic_legal.csv  agentic_medicine.csv  agentic_vs_all_baselines.csv  cd_diabetes_after.csv  cd_diabetes_before.csv  cd_diabetes_expert.csv  cd_diabetes_rules.json  cd_ieee_after.csv  cd_ieee_before.csv  cd_ieee_rules.json  cluster_bootstrap.csv  cost_latency.csv  crossdomain_qa_all.csv  crossdomain_qa_cyber.csv  crossdomain_qa_finance.csv  crossdomain_qa_genomics.csv  crossdomain_qa_legal.csv  crossdomain_qa_medicine.csv  crossdomain_routing.csv  ontology_fair_baselines.csv  ontology_suite.csv  qa_dense.csv  qa_dense_summary.csv  qa_none.csv  qa_none_summary.csv  qa_sma.csv  qa_sma_summary.csv  qa_stats.csv  relation_density.csv  ssb_rows.csv  ssb_stats.csv  ssb_summary.csv  t1_rows.csv  t1_stats.csv  t1_summary.csv  (+10 more)
scripts/: ablation_mechanism.py  agentic_qa.py  agentic_qa_stats.py  agentic_suite.py  agentic_vs_all_baselines.py  baseline_ladder.py  bench_ontology_suite.py  bugsinpy_eval.py  build_release.py  calibrate.py  cluster_bootstrap_suite.py  confirmatory_battery.py  cost_latency.py  crossdomain_after.py  crossdomain_arms.py  crossdomain_before.py  crossdomain_expert.py  crossdomain_qa.py  crossdomain_routing.py  drift_battery.py  family_eval.py  fetch_datasets.py  fetch_model.py  figstyle.py  figure1_tikz.py  figures_agentic.py  figures_ed.py  figures_main.py  figures_paper.py  figures_schematic_tikz.py  figures_supp.py  fraud_elliptic.py  h3_mini_study.py  h3_reconstruct_evidence.py  make_paper_assets.py  ontology_attack_demo.py  ontology_fair_baselines.py  ontology_hpo_regression.py  prepare_ui_corpus.py  rare_disease_test.py  (+5 more)
sma/: __init__.py  cli.py  mcp.py
sma/agent/: __init__.py  adapter_draft.py  api.py  comparison.py  llm.py  policies.py  service.py
sma/data/: ontology_catalog.json
tests/: conftest.py  test_bugsinpy_t3.py  test_drift.py  test_gates.py  test_hipporag.py  test_mcp.py  test_production_loop.py  test_stats.py
(+153 files in other folders)
